Menambah fitur Check Message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ artemis.queue-log=KSEI.LOG
 artemis.queue-in=KSEI.IN
 artemis.queue-out=KSEI.OUT
 batch-size-insert=1
+batch-size-update=1000
+
+## Time For Scheduler In Millisecond
+time-schedule-check=120000
 
 ## Property ActiveMQ Artemis
 JmsId=JmsId
